# cef-kotlin

./: .gitignore  README.md  TODO  build.gradle.kts  settings-setup-plugins.gradle.kts  settings.gradle.kts
_clion/: .gitignore  CMakeLists.txt  settings.gradle.kts
_idea/: settings.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: cef.kt  helpers.kt  info-plist.kt  macOS.kt  os.kt
c-reader/: .gitignore  build.gradle.kts
cef-gen/: build.gradle.kts
cef-gen/src/main/kotlin/org/jonnyzzz/cef/generator/: C.kt  CefPropertyName.kt  GeneratorParameters.kt  copy_functions.kt  functionPointers.kt  functions.kt  global_functions.kt  kotlin-native-helpers.kt  main.kt  structFields.kt  structFunctionPointers.kt  typeInfo.kt  typeReplace.kt  types.kt  types2-model-api.kt  types2-model-impl.kt  types2-model-ref.kt  types2-model-simple.kt  types2-model.kt  types2-substitution.kt  (+11 more)
cef-mpp/: build.gradle.kts
cef-mpp/src/commonMain/kotlin/: Cef.kt
cef-mpp/src/macosX64Main/kotlin/: main.kt
cef-mpp/src/macosX64Main/kotlin/org/jonnyzzz/cef/: main_args.kt  strings.kt
cef-mpp/src/macosX64Test/kotlin/org/jonnyzzz/cef/: stringsTest.kt
cef-sample/: .gitignore  build.gradle.kts
cef-sample/src/macosX64Main/kotlin/: main.kt
deps-cef/: build.gradle.kts
gradle-plugins/: build.gradle.kts  settings.gradle.kts
gradle-plugins/kotlin-cef/: build.gradle.kts
gradle-plugins/kotlin-cef/src/main/kotlin/: cef.kt  helpers.kt  macOS.kt
mpp/: build.gradle.kts
native/: CMakeLists.txt
native/app/: CMakeLists.txt
native/app/mac/: Info.plist  helper-Info.plist
(+33 files in other folders)
